# anthology_visualization

./: .env.example  AGENTS.md  BACKLOG.md  README.md  __init__.py  ew_display_names.json  outage_display_names.json  property_exclusions.json  pyproject.toml  run_viz.sh
app/: __init__.py  db_config.py  deepagents_query.py  instance_query.py  main.py  mock_data.py  models.py  types_from_ddl.py
ddls/: ew_pg_ddl.sql  outage_pg_dll.sql  outage_sql_ddl  play.sql  selectai.sql
mappings/: outage_demo.json
skills/: AGENTS.md
skills/pgql-query/: SKILL.md
skills/pgql-query/assets/: schema_summary.md
skills/pgql-query/references/: REFERENCE.md
skills/sql-query/: SKILL.md
skills/sql-query/assets/: schema_summary.md
skills/sql-query/references/: REFERENCE.md
static/: app.js  index.html  styles.css
tests/: test_visualization_reference_api.py
